--- a/myportafolio/index.html
+++ b/myportafolio/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -69,7 +70,7 @@
     <div>
         <div>
             <section><h3>JOSIP</h3><h3>AMADEUS</h3></section>
-            <section><img src="img/yertec.jpg"></section>
+            <section><img src="img/yertec.jpg" class="itemA1"></section>
             <section><h3>GRAPHIC</h3><h3>DESIGNER</h3></section>
         </div>
     </div>
@@ -84,7 +85,7 @@
                 <img id="slikaG4" src="GIFs/taunt.gif" style="display: none;">
                 <img id="slikaG5" src="GIFs/likovi.gif" style="display: flex;">
             </section>
-            <section><h3 id="prevG" style="font-weight: normal;">PREV.</h3><h3 id="nextG" style="font-weight: normal;">NEXT</h3></section>
+            <section><h3 id="prevG" class="item01G" style="font-weight: normal;">PREV.</h3><h3 id="nextG" class="item02G" style="font-weight: normal;">NEXT</h3></section>
         </div>
     </div>
     
@@ -98,7 +99,7 @@
                 <img id="slikaR4" src="renders/d.jpg" style="display: none;">
                 <img id="slikaR5" src="renders/c.jpg" style="display: flex;">
             </section>
-            <section><h3 id="prevR" style="font-weight: normal;">PREV.</h3><h3 id="nextR" style="font-weight: normal;">NEXT</h3></section>
+            <section><h3 id="prevR" class="item01R" style="font-weight: normal;">PREV.</h3><h3 id="nextR" class="item02R" style="font-weight: normal;">NEXT</h3></section>
         </div>
     </div>
 
@@ -106,10 +107,10 @@
         <section>
             <div><h3 style="font-weight: normal;">CONTACT LINKS</h3></div>
             <div>
-                <a target="_blank" href="https://www.instagram.com/amadeusjosip/" style="font-weight: normal;">IG</a>
-                <a target="_blank" href="https://www.linkedin.com/in/josip-amadeus-ceric/"  style="font-weight: normal;">IN</a>
-                <a target="_blank" href="mailto:josip.amadeus@gmail.com"  style="font-weight: normal;">EM</a>
-                <a target="_blank" href="https://www.fxhash.xyz/u/amadeusjosip"  style="font-weight: normal;">FX</a>
+                <a target="_blank" href="https://www.instagram.com/amadeusjosip/" style="font-weight: normal;" class="itemK1">IG</a>
+                <a target="_blank" href="https://www.linkedin.com/in/josip-amadeus-ceric/"  style="font-weight: normal;" class="itemK2">IN</a>
+                <a target="_blank" href="mailto:josip.amadeus@gmail.com"  style="font-weight: normal;" class="itemK3">EM</a>
+                <a target="_blank" href="https://www.fxhash.xyz/u/amadeusjosip"  style="font-weight: normal;" class="itemK3">FX</a>
             </div>  
         </section>
     </div>
@@ -117,10 +118,10 @@
 </section>
 
 
-<!---------------------------------- ANIMATION LOAD ON REFRESH ------------------------>
+<!---------------------------------- ANIMATION LOAD ON REFRESH -------------------
 <section id="loading">  
     <h5>WELCOME</h5>
-</section> 
+</section> ----->
  
 <script src="script.js"></script>
 </body>
