--- a/myportafolio/index.html
+++ b/myportafolio/index.html
@@ -118,10 +118,10 @@
 </section>
 
 
-<!---------------------------------- ANIMATION LOAD ON REFRESH -------------------
+<!---------------------------------- ANIMATION LOAD ON REFRESH ------------------------>
 <section id="loading">  
     <h5>WELCOME</h5>
-</section> ----->
+</section>
  
 <script src="script.js"></script>
 </body>
