--- a/myportafolio/index.html
+++ b/myportafolio/index.html
@@ -79,11 +79,11 @@
         <div>
             <section><h3>GENERATIVE</h3><h3>ARTWORK</h3></section>
             <section>
-                <img id="slikaG1" src="GIFs/escher.gif" style="display: none;">
-                <img id="slikaG2" src="GIFs/pozdrav.gif" style="display: none;">
-                <img id="slikaG3" src="GIFs/bauhaus.gif" style="display: none;">
-                <img id="slikaG4" src="GIFs/taunt.gif" style="display: none;">
-                <img id="slikaG5" src="GIFs/likovi.gif" style="display: flex;">
+                <img class="slikaTrans" id="slikaG1" src="GIFs/escher.gif" style="display: none;">
+                <img class="slikaTrans" id="slikaG2" src="GIFs/pozdrav.gif" style="display: none;">
+                <img class="slikaTrans" id="slikaG3" src="GIFs/bauhaus.gif" style="display: none;">
+                <img class="slikaTrans" id="slikaG4" src="GIFs/taunt.gif" style="display: none;">
+                <img class="slikaTrans" id="slikaG5" src="GIFs/likovi.gif" style="display: flex;">
             </section>
             <section><h3 id="prevG" class="item01G" style="font-weight: normal;">PREV.</h3><h3 id="nextG" class="item02G" style="font-weight: normal;">NEXT</h3></section>
         </div>
@@ -93,11 +93,11 @@
         <div>
             <section><h3>BLENDER</h3><h3>RENDERS</h3></section>
             <section>
-                <img id="slikaR1" src="renders/a.jpg" style="display: none;">
-                <img id="slikaR2" src="renders/e.jpg" style="display: none;">
-                <img id="slikaR3" src="renders/b.jpg" style="display: none;">
-                <img id="slikaR4" src="renders/d.jpg" style="display: none;">
-                <img id="slikaR5" src="renders/c.jpg" style="display: flex;">
+                <img class="slikaTrans" id="slikaR1" src="renders/a.jpg" style="display: none;">
+                <img class="slikaTrans" id="slikaR2" src="renders/e.jpg" style="display: none;">
+                <img class="slikaTrans" id="slikaR3" src="renders/b.jpg" style="display: none;">
+                <img class="slikaTrans" id="slikaR4" src="renders/d.jpg" style="display: none;">
+                <img class="slikaTrans" id="slikaR5" src="renders/c.jpg" style="display: flex;">
             </section>
             <section><h3 id="prevR" class="item01R" style="font-weight: normal;">PREV.</h3><h3 id="nextR" class="item02R" style="font-weight: normal;">NEXT</h3></section>
         </div>
