--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="format-detection" content="telephone=no">
-<title>PORTFOLIO</title>  
+<title>GLAVNA</title>  
 <link rel="shortcut icon" type="image/png" href="assets/ikona/favicon.png">
 <link rel="stylesheet" type="text/css" href="assets/style.css">  
 
