--- a/demo-scroll/index.html
+++ b/demo-scroll/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" href="./style.css" />
-    <title>3D slušalice</title>
+    <title>SCROLL</title>
   </head>
   <body> 
     
