--- a/p5js-vjezba/index.html
+++ b/p5js-vjezba/index.html
@@ -1,44 +1,37 @@
 <!DOCTYPE html>
-<html lang="">
-
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>p5 vjezba</title> 
-  <link rel="stylesheet" href="style.css">
-  <script src="p5.js"></script> 
-  <script src="script.js"></script> <!--script.js ali zapravo sketch.hs-->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mario Pucic - 01/03</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="p5.js"></script> 
+    <script src="script.js"></script>
 </head>
-
-<body> 
-
-  <section class="heder">
-    <h2 class="isto">P5JS</h2>
-    <h2 class="isto"></h2>
-    <h2 class="isto">PROJECT</h2>
-    <h2 class="isto"></h2>
-    <h2 class="isto">PRACTICE</h2>
-  </section>
+<body>
 
 
-  <footer class="futer">
-    <h2 class="isto">JOSIPAMADEUS@GMAIL.COM</h2>
-    <h2 class="isto"></h2>
-    <h2 class="isto"></h2>
-    <h2 class="isto"></h2>
-    <h2 class="isto">099/5416-404</h2> 
-  </footer>
-
-  
-  <main>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur dolore non reiciendis aut doloribus, laudantium porro qui. Et porro illo totam vel odio aut nam placeat ad qui officiis ex minima autem laudantium eligendi, obcaecati exercitationem dicta nostrum facilis quia voluptates amet commodi quasi repudiandae quis. Nisi eaque dolorem qui nesciunt earum neque pariatur recusandae quis aliquid alias excepturi nobis ipsum voluptatibus, esse doloremque, architecto fugit aut illum itaque praesentium, cupiditate quos ipsa! Est possimus dolorum, numquam, quas quaerat commodi delectus facilis ducimus mollitia maiores expedita tempora consectetur illum ratione nostrum debitis! Saepe vero dolorem maiores, iure adipisci quisquam odio delectus nihil odit aut, tempora sapiente laborum eaque nam, ut facere recusandae asperiores? Quibusdam sit recusandae debitis, excepturi asperiores esse aliquam velit beatae delectus inventore, mollitia explicabo, facere iste maiores possimus labore nesciunt? Sequi, quidem quibusdam. Ipsum deleniti, illum sequi quo, officiis sit laudantium maiores corrupti quas delectus facilis similique dicta molestiae praesentium perspiciatis! Perferendis sunt nesciunt tempore odit, tempora illo ipsum adipisci, dicta possimus eaque a, modi molestiae et exercitationem accusamus distinctio suscipit. Blanditiis, quo ratione sapiente autem architecto, eaque laboriosam necessitatibus delectus quas laborum possimus eligendi molestiae perspiciatis vero aspernatur placeat at repudiandae velit animi est in. Unde eligendi blanditiis quod est cum quisquam error rerum impedit quae reprehenderit voluptate ad numquam ab vero labore suscipit minima iste, porro quidem. Laboriosam et eveniet provident ipsum corrupti, necessitatibus eaque recusandae inventore quisquam soluta minus magni, labore ex voluptatem? Quaerat, quod! Quisquam doloremque iste quasi recusandae iusto assumenda consectetur dolorem eveniet, impedit perferendis aspernatur tempora nesciunt asperiores sed nobis eligendi fugiat ipsum omnis veniam et quis natus ea sit aut. Laboriosam ad, labore quisquam molestiae voluptates pariatur delectus! Non exercitationem, dolore consequuntur, minus voluptates error porro quas, possimus fugiat accusamus iusto numquam nemo! Minus provident impedit repellendus tempore ea perspiciatis quasi expedita blanditiis, nemo, sit sapiente natus. Alias eligendi totam dolores perferendis sapiente suscipit deleniti, sint id tempore minus ratione fugiat! Mollitia et dignissimos perferendis inventore rerum repudiandae accusamus eaque impedit, laborum veritatis nobis repellat iste exercitationem maxime odio error sequi quibusdam ab, minima ducimus libero! Quam nam dolore ducimus quia earum. Animi quaerat ullam accusamus cumque non? Omnis labore rerum quis! Pariatur voluptatum illum sit sunt est quae dolore veritatis quia, nemo magni iure aliquam voluptates natus perferendis culpa laborum distinctio reiciendis modi. Itaque ipsum molestias iure, eligendi nihil laudantium architecto magnam fuga molestiae consectetur eum odit voluptates nostrum.</p>
-  </main>
+<div>
+    <section>
+        <div id="vid">
+            <p>Mario is a 33-year-old photographer from Zagreb, Croatia with a unique style. His dreamy photos on Instagram capture the imagination of his followers, showcasing his talents as a visionary artist.</p>
+            <div><a href="#">Email ↗</a><a target="_blank" href="https://www.google.com/?hl=hr">Instagram ↗</a></div>
+            <p>Site design & development by <span><a target="_blank" href="https://www.google.com/?hl=hr">Josip Amadeus</a></span></p>
+            <p>©2023 Josip Amadeus. All rights reserved.</p>
+        </div>
+    </section>
+    <section>
+        <div><a target="_blank" href="https://www.google.com/?hl=hr">Mario Pucic</a></div>
+        <div><div><a target="_blank" href="https://www.google.com/?hl=hr">About</a></div><div><a target="_blank" href="https://www.google.com/?hl=hr">Gallery</a></div><div><a target="_blank" href="https://www.google.com/?hl=hr">Contact</a></div></div>
+        <div><a target="_blank" href="https://www.google.com/?hl=hr">(+385)98/7654-321</a></div>
+        <div><a href="mailto:mario.pucic@gmail.com">mario.pucic@gmail.com</a></div> 
+    </section>
+</div>
 
  
-
-
-
-
 </body>
-
 </html>
+
+
+
