--- a/p5js-vjezba/index.html
+++ b/p5js-vjezba/index.html
@@ -19,7 +19,7 @@
     </section>
     <section>
         <div><a href="#">Mario Pucic</a></div>
-        <div><div><a id="tabby" href="/about">About</a></div><div><a href="#">Contact</a></div><div><a href="#" id="selekted">Gallery</a></div></div>
+        <div><div><a id="tabby" href="../p5js-vjezba/about">About</a></div><div><a href="#">Contact</a></div><div><a href="#" id="selekted">Gallery</a></div></div>
         <div><a id="boja" href="#">(+385)98/7654-321</a></div>
         <div><a href="mailto:mario.pucic@gmail.com">mario.pucic@gmail.com</a></div> 
     </section>    
