--- a/xyz/mywebsite/index.html
+++ b/xyz/mywebsite/index.html
@@ -13,7 +13,10 @@
         <div>
             <div>lijevo</div>
             <div>tockice</div>
-            <div>desno</div>
+            <div>
+                <section id="original"><h3>Lorem, ipsum dolor.</h3></section>
+                <section id="secret"><h3>Lorem, Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dolor molestias.</h3></section>
+            </div>
         </div>
 
 
