--- a/xyz/mywebsite/index.html
+++ b/xyz/mywebsite/index.html
@@ -11,19 +11,33 @@
 
     <section>
         <div>
-            <div>lijevo</div>
-            <div>tockice</div>
             <div>
-                <section id="original"><h3>Lorem, ipsum dolor.</h3></section>
-                <section id="secret"><h3>Lorem, Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dolor molestias.</h3></section>
+                <section><h3>2023</h3><h3>CRO</h3></section>
+                <section><h3>AMADEUS</h3><h3>JOSIP</h3></section>
+                <section><h3>ČERIĆ</h3><h3></h3></section>
+            </div>
+            <div>
+                <h3>.</h3><h3>.</h3><h3>.</h3><h3><br></h3>
+                <h3>.</h3><h3>.</h3><h3>.</h3><h3><br></h3>
+                <h3>.</h3><h3>.</h3><h3>.</h3><h3><br></h3>
+            </div>
+            <div>
+                <section id="original"><h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam hic tempore corrupti ducimus dolore delectus, alias voluptatum deleniti quam perferendis molestias qui dolor similique excepturi officiis quas repudiandae laboriosam sint. Itaque repellat corporis obcaecati pariatur impedit minus, laborum reprehenderit exercitationem sequi est voluptatibus veritatis soluta. Dignissimos assumenda eos perferendis molestias facere. Consequatur quod ducimus corporis non aspernatur dicta fugiat maiores quo!</h3></section>
+                <section id="secret"><h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque minima molestiae corrupti? Eos dignissimos fugiat ipsam exercitationem blanditiis. Quaerat, laudantium exercitationem perferendis ducimus, nihil temporibus aliquid consectetur nobis dicta architecto accusamus, nisi quibusdam esse repellat.</h3></section>
             </div>
         </div>
 
 
 
         <div>
-            <div>INFO</div>
-            <div>26,ZG,DESINGER</div>
+            <div>INFO:</div>
+            <div>
+                <h3>1996</h3>
+                <h3>ZAGREB, CRO</h3>
+                <h3>GRAPHIC DESIGNER</h3>
+                <h3>WEB-DEVELOPER</h3>
+                <h3>CODER</h3>
+            </div>
         </div>
 
 
