--- a/demo-p5js/demo-gumbiNoiseMali/index.html
+++ b/demo-p5js/demo-gumbiNoiseMali/index.html
@@ -19,7 +19,7 @@
           <div class="desno-para txt">O animaciji<br>Na lijevoj se strani nalazi animacija, tj. gif, koji se animira po nekim početnim postavkama, a koje se mogu mijenjati. Gif se sastoji od X puta Y znakova. U početku su ti znakovi %, + i *. Ti se znakovi mogu u izborniku sa desne strane mijenjati u bilo koje znakove. Ne moraju se upisivati znakovi, mogu se upisati i cijele riječi, no tada će se sama animacija prikazivati dosta sporije. Osim samih znakova, mogu se mijenjati veličina znakova, rub znakova, razina kaotičnosti odnosno noise i još pokoja postavka.</div>
           <div class="desno-para2 txt">Mogućnosti<br>Osim interaktivnosti preko gumbova i slidera može se isprogramirati animacija koja će biti osjetljiva na poziciju korisnikovog miša.</div>
           <div class="desno-para3 txt">Spremanje animacije<br>Animacija koja se prikazuje može se spremiti u obliku GIF-a klikom na gumb "SAVE as GIF". Animacija će se spremiti u .gif formatu i ići će u loop.</div>
-          <div class="desno-link"><a href="../half-scroll">Back to my portfolio</a></div>
+          <div class="desno-link"><a href="../../half-scroll">Back to my portfolio</a></div>
         </div>
       </div>
       <div class="nav-bar">
