--- a/half-scroll/index.html
+++ b/half-scroll/index.html
@@ -31,9 +31,9 @@
     <section id="s2-demo">
         <h3 class="boldani-tekst-bijeli">INTERAKTIV</h3>
         <div class="linkovi">
-            <a href="../demo-gumbiNoiseMali" target="_blank">BUTTONS</a>
-            <a href="../demo-scroll" target="_blank">ON-SCROLL</a>
-            <a href="../demo-mis" target="_blank">MOUSE</a>
+            <a href="../demo-p5js/demo-gumbiNoiseMali" target="_blank">BUTTONS</a>
+            <a href="../demo-p5js/demo-scroll" target="_blank">ON-SCROLL</a>
+            <a href="../demo-p5js/demo-mis" target="_blank">MOUSE</a>
         </div>
     </section>
      <!--about/section 333333333333-->
