--- a/xyz/mywebsite/index.html
+++ b/xyz/mywebsite/index.html
@@ -12,8 +12,8 @@
     <section>
         <div>
             <div>
-                <section><h3>2023</h3><h3>CRO</h3></section>
-                <section><h3>AMADEUS</h3><h3>JOSIP</h3></section>
+                <section><h3>JOSIP</h3><h3>ZAGREB</h3></section>
+                <section><h3>AMADEUS</h3><h3>CRO</h3></section>
                 <section><h3>ČERIĆ</h3><h3></h3></section>
             </div>
             <div>
@@ -30,13 +30,12 @@
 
 
         <div>
-            <div>INFO:</div>
+            <div><h3>SITES I BUILT:</h3></div>
             <div>
-                <h3>1996</h3>
-                <h3>ZAGREB, CRO</h3>
-                <h3>GRAPHIC DESIGNER</h3>
-                <h3>WEB-DEVELOPER</h3>
-                <h3>CODER</h3>
+                <h3>JOEDIVER.CO</h3>
+                <h3>MARIO-PUCIC.COM</h3>
+                <h3>NIKA-ILIC.COM</h3>
+                <h3>903BLOK.COM</h3>
             </div>
         </div>
 
@@ -46,7 +45,7 @@
         <div>
             <div>LINKEDIN</div>
             <div>INSTAGRAM</div>
-            <div>+38599/5416-404</div>
+            <div>0038599/5416-404</div>
             <div>JOSIP.AMADEUS@GMAIL.COM</div>
         </div>
     </section>
