--- a/blok903/index.html
+++ b/blok903/index.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body style="background-color: tomato; height: 50vh; display: flex; justify-content: start; align-items: start;">
-    <a href="/prvi" style="color: black; font-size: 60px; padding: 100px;">1</a>
+    <a href="../903/prvi" style="color: black; font-size: 60px; padding: 100px;">1</a>
     <br>
-    <a href="/zadnji" style="color: black; font-size: 60px;padding: 100px;">2</a>
+    <a href="../903/zadnji" style="color: black; font-size: 60px;padding: 100px;">2</a>
     
 </body>
 </html>
