--- a/xyz/ricos-senor/index.html
+++ b/xyz/ricos-senor/index.html
@@ -23,7 +23,7 @@
         <div class="tekst-gore">
             <a href="https://www.linkedin.com/in/josip-amadeus-ceric" target="_blank" class="tekst-gore-link item-2" 
             onmouseenter="efekt1_1a()" onmouseleave="efekt1_1z()" id="link-linkedin">LINKEDIN</a> 
-            <a href=".." target="_blank" class="tekst-gore-link item-2"
+            <a href="../.." target="_blank" class="tekst-gore-link item-2"
             onmouseenter="efekt1_2a()" onmouseleave="efekt1_2z()" id="link-website">WEBSITE</a>  
         </div> 
 
