--- a/xyz/ricos-senor/index.html
+++ b/xyz/ricos-senor/index.html
@@ -37,7 +37,7 @@
             <h1>Pozdrav, ja sam Josip i ovo je moje rješenje za RICO'S zadatak</h1>
         </div>
         <div class="pocetak"> 
-            <h3>Iako je ova stranica dosta jednostavnog izgleda nju sam napravio ja i to uz pomoć programiranja u jezicima HTML, CSS i JavaScript. Osim ove kreirao sam i <a href=".." class="link-href" target="_blank">ovu stranicu</a> koja mi služi kao portfolio.<br><br>Prilikom izrade rješenja za RICO'S koristio sam Adobe Effects za izradu animacija, Blender za izradu rendera te JavaScript za generiranje grafika. Kada u planu imam izvesti jednu ili dvije grafike tada to radim u Illustratoru, no kada želim izvesti veliku količinu grafika (kao što je slučaj u ovome radu) tada mi je isplativije napraviti to putem programiranja i pustiti programskome kodu da u svega nekoliko sekundi izgenerira 10, 50 ili 100 grafika. <br><br> </h3>
+            <h3>Iako je ova stranica dosta jednostavnog izgleda nju sam napravio ja i to uz pomoć programiranja u jezicima HTML, CSS i JavaScript. Osim ove kreirao sam i <a href="../.." class="link-href" target="_blank">ovu stranicu</a> koja mi služi kao portfolio.<br><br>Prilikom izrade rješenja za RICO'S koristio sam Adobe Effects za izradu animacija, Blender za izradu rendera te JavaScript za generiranje grafika. Kada u planu imam izvesti jednu ili dvije grafike tada to radim u Illustratoru, no kada želim izvesti veliku količinu grafika (kao što je slučaj u ovome radu) tada mi je isplativije napraviti to putem programiranja i pustiti programskome kodu da u svega nekoliko sekundi izgenerira 10, 50 ili 100 grafika. <br><br> </h3>
         </div>
  
         <div class="sredina prvi"><img src="renderi/000-B01.jpg" class="slika item-1"></div> 
